--- a/integradora_1/package.json
+++ b/integradora_1/package.json
@@ -2,7 +2,6 @@
   "name": "practica-integradora",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "type": "module",
   "scripts": {
     "start": "node --watch src/app.js"
@@ -11,10 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
-    "url": "^0.11.3",
     "mongoose": "^8.3.5",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "url": "^0.11.3"
   }
 }
